--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
+    "@capacitor/cli": "1.0.0-beta.7",
+    "@capacitor/core": "1.0.0-beta.7",
+    "@capacitor/ios": "^1.0.0-beta.7",
     "@ionic-native/core": "5.0.0-beta.14",
     "@ionic-native/splash-screen": "5.0.0-beta.14",
     "@ionic-native/status-bar": "5.0.0-beta.14",
     "@ionic/angular": "^4.0.0-beta.0",
     "@ionic/pro": "2.0.3",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
