--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/pro": "2.0.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.3",
+    "moment": "^2.22.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
