--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "@capacitor/cli": "1.0.0-beta.7",
     "@capacitor/core": "1.0.0-beta.7",
     "@capacitor/ios": "^1.0.0-beta.7",
+    "@ionic-native/calendar": "^4.13.0",
     "@ionic-native/core": "5.0.0-beta.14",
     "@ionic-native/splash-screen": "5.0.0-beta.14",
     "@ionic-native/status-bar": "5.0.0-beta.14",
     "@ionic/angular": "^4.0.0-beta.0",
+    "@ionic/lab": "^1.0.9",
     "@ionic/pro": "2.0.3",
     "bootstrap": "^4.1.3",
+    "cordova-plugin-calendar": "^5.1.2",
     "core-js": "^2.5.3",
+    "ionic3-calendar": "^1.1.6",
+    "ionic3-calendar-en": "^1.1.3",
     "moment": "^2.22.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
@@ -61,5 +66,10 @@
     "tslint": "~5.11.0",
     "typescript": "~2.7.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-calendar": {}
+    }
+  }
 }
