--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "~6.1.1",
-    "@angular/core": "~6.1.1",
+    "@angular/core": "^6.1.7",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
     "@angular/platform-browser": "~6.1.1",
@@ -27,7 +27,7 @@
     "@ionic-native/core": "5.0.0-beta.14",
     "@ionic-native/splash-screen": "5.0.0-beta.14",
     "@ionic-native/status-bar": "5.0.0-beta.14",
-    "@ionic/angular": "^4.0.0-beta.0",
+    "@ionic/angular": "^4.0.0-beta.11",
     "@ionic/lab": "^1.0.9",
     "@ionic/pro": "2.0.3",
     "bootstrap": "^4.1.3",
