--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/lab": "^1.0.9",
     "@ionic/pro": "2.0.3",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "cordova-plugin-calendar": "^5.1.2",
     "core-js": "^2.5.3",
     "ionic3-calendar": "^1.1.6",
