--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^4.0.0-beta.11",
     "@ionic/lab": "^1.0.9",
     "@ionic/pro": "2.0.3",
+    "@swimlane/ngx-datatable": "^13.1.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "cordova-plugin-calendar": "^5.1.2",
