--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ionic3-calendar-en": "^1.1.3",
     "moment": "^2.22.2",
     "rxjs": "6.2.2",
+    "underscore": "^1.9.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
